--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
         </main>
         <div class="beside__section">
 
-            <section class="price">sdsdsdsdsdsdsdsdsdsds</section>
-            <section class="aboutus">sdsdsdsdsdsdsdsdsdsdsd</section>
+            <section class="price">
+                <h2>Assinatura Mensal</h2>
+
+            </section>
+
+            <section class="aboutus"></section>
 
 
         </div>
